refactor: implement RecetaRequestDto and optimize security configurations to address SonarQube vulnerabilities