@@ -13,7 +13,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.crypto.SecretKey;
 
@@ -23,16 +22,15 @@ import static com.duoc.seguridadcalidad.Constants.*;
 public class JWTAuthorizationFilter extends OncePerRequestFilter {
 
     private Claims setSigningKey(HttpServletRequest request) {
-        String jwtToken = request.
-                getHeader(HEADER_AUTHORIZACION_KEY).
-                replace(TOKEN_BEARER_PREFIX, "");
+        String jwtToken = request
+                .getHeader(HEADER_AUTHORIZACION_KEY)
+                .replace(TOKEN_BEARER_PREFIX, "");
 
         return Jwts.parser()
                 .verifyWith((SecretKey) getSigningKey(SUPER_SECRET_KEY))
                 .build()
                 .parseSignedClaims(jwtToken)
                 .getPayload();
-
     }
 
     private void setAuthentication(Claims claims) {
@@ -42,23 +40,21 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
 
         UsernamePasswordAuthenticationToken auth =
                 new UsernamePasswordAuthenticationToken(claims.getSubject(), null,
-                authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+                authorities.stream().map(SimpleGrantedAuthority::new).toList()); // S6204
 
         SecurityContextHolder.getContext().setAuthentication(auth);
-
     }
 
-    private boolean isJWTValid(HttpServletRequest request, HttpServletResponse res) {
+    // S1172: removed unused 'res' parameter; S1126: simplified to direct return
+    private boolean isJWTValid(HttpServletRequest request) {
         String authenticationHeader = request.getHeader(HEADER_AUTHORIZACION_KEY);
-        if (authenticationHeader == null || !authenticationHeader.startsWith(TOKEN_BEARER_PREFIX))
-            return false;
-        return true;
+        return authenticationHeader != null && authenticationHeader.startsWith(TOKEN_BEARER_PREFIX);
     }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
         try {
-            if (isJWTValid(request, response)) {
+            if (isJWTValid(request)) { // S1172: call without 'response'
                 Claims claims = setSigningKey(request);
                 if (claims.get("authorities") != null) {
                     setAuthentication(claims);
@@ -69,10 +65,10 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
                 SecurityContextHolder.clearContext();
             }
             filterChain.doFilter(request, response);
+            // S3626: removed redundant 'return' that was inside catch block
         } catch (ExpiredJwtException | UnsupportedJwtException | MalformedJwtException e) {
             response.setStatus(HttpServletResponse.SC_FORBIDDEN);
             response.sendError(HttpServletResponse.SC_FORBIDDEN, e.getMessage());
-            return;
         }
     }
 
